tests/baselines/reference/subtypingWithNumericIndexer3.errors.txt
==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer3.ts (5 errors) ====
    // Derived type indexer must be subtype of base type indexer
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    class A {
        [x: number]: Derived;
    }
    
    class B extends A {
          ~
!!! error TS2416: Class 'B' incorrectly extends base class 'A':
!!! error TS2416:   Index signatures are incompatible:
!!! error TS2416:     Type 'Base' is not assignable to type 'Derived':
!!! error TS2416:       Property 'bar' is missing in type 'Base'.
        [x: number]: Base; // error
    }
    
    class B2 extends A {
        [x: number]: Derived2; // ok
    }
    
    module Generics {
        class A<T extends Derived> {
            [x: number]: T;
        }
    
        class B extends A<Base> {
                        ~~~~~~~
!!! error TS2343: Type 'Base' does not satisfy the constraint 'Derived':
!!! error TS2343:   Property 'bar' is missing in type 'Base'.
            [x: number]: Derived; // error
        }
    
        class B2 extends A<Derived> {
            [x: number]: Derived2; // ok
        }
    
        class B3<T extends Derived> extends A<T> {
              ~~
!!! error TS2416: Class 'B3<T>' incorrectly extends base class 'A<T>':
!!! error TS2416:   Index signatures are incompatible:
!!! error TS2416:     Type 'Base' is not assignable to type 'T'.
            [x: number]: Base; // error
        }
    
        class B4<T extends Derived> extends A<T> {
              ~~
!!! error TS2416: Class 'B4<T>' incorrectly extends base class 'A<T>':
!!! error TS2416:   Index signatures are incompatible:
!!! error TS2416:     Type 'Derived' is not assignable to type 'T'.
            [x: number]: Derived; // error
        }
    
        class B5<T extends Derived2> extends A<T> {
              ~~
!!! error TS2416: Class 'B5<T>' incorrectly extends base class 'A<T>':
!!! error TS2416:   Index signatures are incompatible:
!!! error TS2416:     Type 'Derived2' is not assignable to type 'T'.
            [x: number]: Derived2; // error
        }
    }